--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,4 +1,4 @@
-# Load data into R environment 
+# 📥 Load data into R environment 
 
 ## Organization of built-in data
 The built-in data follows several specifications for constructing: 
